--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title></title>
+    <link rel="stylesheet" href="/static/1.css">
 </head>
 <body>
-    hello 
+  hello 这是第一个express页面 
 </body>
 </html>
